--- a/markup/components/page/page.scss
+++ b/markup/components/page/page.scss
@@ -1,7 +1,6 @@
 .page {
     &__wrapper {
         position: relative;
-        @include container();
 
         &::before {
             content: '';
@@ -14,6 +13,12 @@
             left: 0;
 
             box-shadow: 0 0 20px rgba($color-primary, 0.2);
+        }
+
+        @media #{$desktop} {
+            @include container();
+            padding-left: 0 !important;
+            padding-right: 0 !important;
         }
     }
 
